[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/NewToDoList.gd" type="Script" id=1]

[node name="NewToDoList" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Items" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopBar" type="HBoxContainer" parent="Items"]
margin_right = 1024.0
margin_bottom = 24.0

[node name="NewToDoText" type="LineEdit" parent="Items/TopBar"]
margin_right = 1000.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "New ToDo Text"

[node name="AddToDoButton" type="Button" parent="Items/TopBar"]
margin_left = 1004.0
margin_right = 1024.0
margin_bottom = 24.0
text = "+"

[node name="Items" type="VBoxContainer" parent="Items"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 576.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DeleteBRDButton" type="Button" parent="Items"]
margin_top = 580.0
margin_right = 1024.0
margin_bottom = 600.0
text = "Delete BRD"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_right = 100.0
margin_bottom = 35.0
dialog_text = "Are you sure?"

[connection signal="text_entered" from="Items/TopBar/NewToDoText" to="." method="_on_NewToDoText_text_entered"]
[connection signal="pressed" from="Items/TopBar/AddToDoButton" to="." method="_on_AddToDoButton_pressed"]
[connection signal="pressed" from="Items/DeleteBRDButton" to="." method="_on_DeleteBRDButton_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
